src/objects/ProductRatePlanCharge__c.object
<CustomObject>
    <fields>
        <fullName>AccountingCode__c</fullName>
        <label>Accounting Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplyDiscountToOneTime_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Discount To One Time Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApplyDiscountToRecurringCharges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Discount To Recurring Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApplyDiscountToUsageCharges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Discount To Usage Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DefaultQuantity__c</fullName>
        <label>Default Quantity</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DiscountApplyType__c</fullName>
        <label>Discount Apply Type</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DiscountLevel__c</fullName>
        <label>Discount Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RatePlan</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ListPrice__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MaxQuantity__c</fullName>
        <label>Max Quantity</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinQuantity__c</fullName>
        <label>Min Quantity</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flat Fee</fullName>
                </value>
                <value>
                    <fullName>Volume</fullName>
                </value>
                <value>
                    <fullName>Tiered</fullName>
                </value>
                <value>
                    <fullName>Overage</fullName>
                </value>
                <value>
                    <fullName>Tiered with Overage</fullName>
                </value>
                <value>
                    <fullName>Discount-Fixed Amount</fullName>
                </value>
                <value>
                    <fullName>Discount-Percentage</fullName>
                </value>
                <value>
                    <fullName>Per Unit Pricing</fullName>
                </value>
                <value>
                    <fullName>Per Unit</fullName>
                    <isActive>false</isActive>
                    <label>Per Unit</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrepaymentPeriods__c</fullName>
        <label>Prepayment Periods</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PriceTable__c</fullName>
        <label>Price Table</label>
        <precision>14</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductRatePlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Rate Plan</label>
        <referenceTo>ProductRatePlan__c</referenceTo>
        <relationshipName>Product_Rate_Plan_Charge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecurringPeriod__c</fullName>
        <label>Recurring Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Semi-Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RevRecCode__c</fullName>
        <label>Rev Rec Code</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxCode__c</fullName>
        <label>Tax Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One-Time</fullName>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
                <value>
                    <fullName>Usage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitOfMeasure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit Of Measure</label>
        <referenceTo>Zuora__UnitOfMeasure__c</referenceTo>
        <relationshipName>Product_Rate_Plan_Charge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UptoHowManyPeriods__c</fullName>
        <label>Up to How Many Periods</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DAZN Product Rate Plan Charge</label>
    <nameField>
        <label>Product Rate Plan Charge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DAZN Product Rate Plan Charge</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>